tests/functionalTests/valid/code/whitespaces.hs
       main     :: IO
();



   main
  =
 do          { putStr
    "Whitespaces check"



    ;
   }

            ;
