tests/functionalTests/invalid/code/quotationMarkInsideAString.hs
main :: IO ();
main = putStr "Anything \"";
